fix: Незаказывание треков