@@ -7,6 +7,7 @@ import ru.zalimannard.command.Requirement;
 
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.List;
 import java.util.regex.Pattern;
 
 public class Info extends Command {
@@ -24,7 +25,7 @@ public class Info extends Command {
                         )
                 )),
                 "Информация о текущем/указанном треке",
-                new ArrayList<>(Arrays.asList(
+                new ArrayList<>(List.of(
                         Requirement.BOT_IN_THE_VOICE_CHANNEL
                 ))
         );
