@@ -7,6 +7,7 @@ import ru.zalimannard.command.Requirement;
 
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.List;
 import java.util.regex.Pattern;
 
 public class Queue extends Command {
@@ -32,7 +33,7 @@ public class Queue extends Command {
                         )
                 )),
                 "Показать 10 треков / n треков / n треков до текущего / всю очередь",
-                new ArrayList<>(Arrays.asList(
+                new ArrayList<>(List.of(
                         Requirement.BOT_IN_THE_VOICE_CHANNEL
                 ))
         );
