@@ -8,6 +8,7 @@ import ru.zalimannard.track.Track;
 
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.List;
 import java.util.Random;
 import java.util.regex.Pattern;
 
@@ -15,7 +16,7 @@ public class Shuffle extends Command {
     public Shuffle() {
         super(
                 new ArrayList<>(Arrays.asList("shuffle", "sh")),
-                new ArrayList<>(Arrays.asList(
+                new ArrayList<>(List.of(
                         new Argument(
                                 " ",
                                 Pattern.compile(" *")
