@@ -7,13 +7,14 @@ import ru.zalimannard.command.Requirement;
 
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.List;
 import java.util.regex.Pattern;
 
 public class Skip extends Command {
     public Skip() {
         super(
                 new ArrayList<>(Arrays.asList("skip", "s")),
-                new ArrayList<>(Arrays.asList(
+                new ArrayList<>(List.of(
                         new Argument(
                                 " ",
                                 Pattern.compile(" *")
